# votos-senado-api

./: .gitignore  Dockerfile  LICENSE  Makefile.sh  Pipfile  README.md  api.yaml  pyproject.toml  requirements.txt
src/: get_data.py  main.py
src/classes/: Senador.py  Votacao.py  senador.py  votacao.py
